<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    tools:context="com.ydev.convolution2018.About_UIT.AboutUit">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundimg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/uit_rgpv"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgUIT"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="UIT Image"
                android:scaleType="fitCenter"
                app:srcCompat="@color/fragment_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rectangle_bottom_curve_border"
                android:elevation="10dp"
                android:padding="5dp"
                android:text="@string/uit_rgpv_value"
                android:textColor="@android:color/background_light"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/history_location"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgHistory"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="History"
                android:src="@color/fragment_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rectangle_bottom_curve_border"
                android:padding="5dp"
                android:text="@string/history_location_value"
                android:textColor="@android:color/background_light"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/campus_layout"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgMAP"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="MAP"
                android:src="@color/fragment_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rectangle_bottom_curve_border"
                android:padding="5dp"
                android:text="@string/campus_layout_value"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about"
                android:padding="2dp"
                android:text="@string/contact"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_bottom_curve_border"
                android:padding="5dp"
                android:text="@string/contact_value"
                android:textColor="@android:color/background_light"
                android:textSize="16dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
